[project]
name = "nv-attestation-sdk"
version = "1.0.0"
authors = [
    {name = "NVIDIA"},
]
description = "The Attestation SDK provides developers with a easy to use APIs for implementing attestation capabilities into their applications."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    'pyjwt ~= 2.7.0',
    'verifier == 1.0.0'
]
keywords = [
    "confidential-computing",
    "local-gpu-verifier",
    "attestation",
    "NVIDIA"
]