[tool.poetry]
name = "nv-attestation-sdk"
version = "2.1.0"
description = "The Attestation SDK provides developers with a easy to use APIs for implementing attestation capabilities into their applications."
authors = ["Karthik Jayaraman <kjayaraman@nvidia.com>"]
readme = "README.md"
keywords = [
    "confidential-computing",
    "local-gpu-verifier",
    "attestation",
    "NVIDIA"
]

[tool.poetry.dependencies]
python = ">=3.7"
pyjwt = "~2.7.0"
requests = "~2.32.3"
cryptography = "==43.0.1"
ecdsa = "==0.18.0"
signxml = "==3.2.0"
xmlschema = "==2.2.3"
pyOpenSSL = "==24.2.1"
PyJWT = "==2.7.0"
nvidia-ml-py = ">=12.535.77"
nv-local-gpu-verifier = "2.1.0"
build = ">=0.7.0"
twine = ">=3.7.1"
pylint = ">=2.9.6"
pytest = "==8.1.1"
pytest-cov = ">=5.0.0"


[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.package.data]
# nv_attestation_sdk = ["verifiers/nv_switch_verifier/rim/*.xsd", "verifiers/nv_switch_verifier/certs/*.pem"]
