[tool.poetry]
name = "nv-ppcie-verifier"
version = "1.6.3"
description = "Protected PCIE Verifier"
authors = ["Shwetha Kalyanaraman <skalyanarama@nvidia.com>"]
license = "OSI Approved :: Apache Software License"
readme = "README.md"
packages = [{include = "ppcie"}]

[tool.poetry.dependencies]
python = "^3.9"
pylint = "3.1.0"
black = "24.3.0"
wheel = "0.43.0"
cryptography = "43.0.1"
dill = "0.3.8"
typing_extensions = "4.10.0"
pathspec = "0.12.1"
click = "8.1.7"
setuptools = "80.9.0"
astroid = "3.1.0"
tomlkit = "0.12.4"
timeout-decorator = "0.5.0"
pytest = "8.1.1"
build = "1.2.1"
nvidia-ml-py = "^12.550.52"
prettytable = "^3.10.0"
pytest-cov = "^5.0.0"
nv-local-gpu-verifier = "2.6.2"
nv-attestation-sdk = "2.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
